testament/tests/shouldfail/tcolumn.nim
discard """
errormsg: "undeclared identifier: 'undeclared'"
line: 8
column: 7
target: c
"""
# test should fail because the line directive is wrong
echo undeclared
